<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/margin_medium"
        android:layout_margin="@dimen/margin_medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/iv_poster"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="@dimen/text_xextralarge"
            android:layout_below="@id/iv_poster"
            android:textStyle="bold"
            android:layout_margin="@dimen/margin_small"
            />

            <TextView
                android:id="@+id/tv_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_text"
                android:textSize="@dimen/text_extralarge"
                android:layout_below="@id/iv_poster"
                android:layout_toRightOf="@id/tv_title"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small"
                />

            <TextView
                android:id="@+id/tv_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:textSize="@dimen/text_xextralarge"
                android:layout_below="@id/tv_title"
                android:textStyle="bold"
                android:layout_margin="@dimen/margin_small"
                />

            <TextView
                android:id="@+id/tv_type_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_text"
                android:textSize="@dimen/text_extralarge"
                android:layout_below="@id/tv_title"
                android:layout_toRightOf="@id/tv_type"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small"
                />

            <TextView
                android:id="@+id/tv_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/year"
                android:textSize="@dimen/text_xextralarge"
                android:layout_below="@id/tv_type"
                android:textStyle="bold"
                android:layout_margin="@dimen/margin_small"
                />

            <TextView
                android:id="@+id/tv_year_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/year_text"
                android:textSize="@dimen/text_extralarge"
                android:layout_below="@id/tv_type"
                android:layout_toRightOf="@id/tv_year"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small"
                />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>